--- a/.github/workflows/front-ci.yml
+++ b/.github/workflows/front-ci.yml
@@ -14,19 +14,20 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [18]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v4
     - name: Use Node.js $
       uses: actions/setup-node@v4
       with:
-        node-version: $
+        node-version: 18
         cache: 'npm'
         cache-dependency-path: package-lock.json
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+
+    - name: Sauvegarde du build
+      uses: actions/upload-artifact@v4
+      with:
+        name: angular-build
+        path: dist/
