--- a/.github/workflows/front-ci.yml
+++ b/.github/workflows/front-ci.yml
@@ -21,13 +21,16 @@ jobs:
       with:
         node-version: 18
         cache: 'npm'
-        cache-dependency-path: package-lock.json
+        cache-dependency-path: front/package-lock.json
     - run: npm ci
+      working-directory: front
     - run: npm run build --if-present
+      working-directory: front
     - run: npm test
+      working-directory: front
 
     - name: Sauvegarde du build
       uses: actions/upload-artifact@v4
       with:
         name: angular-build
-        path: dist/
+        path: front/dist/
