--- a/.github/workflows/front-ci.yml
+++ b/.github/workflows/front-ci.yml
@@ -65,4 +65,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
-          path: ./coverage/bobapp
+          path: front/coverage/bobapp
