--- a/.github/workflows/front-ci.yml
+++ b/.github/workflows/front-ci.yml
@@ -67,14 +67,14 @@ jobs:
           name: coverage-report
           path: front/coverage/bobapp
 
-    sonarqube :
-      nom :  SonarQube
-      runs-on :  ubuntu-latest
-      steps :
-        - uses :  actions/checkout@v4
-          with :
-            fetch-depth :  0   # Les clones superficiels doivent être désactivés pour une meilleure pertinence de l'analyse
-        - nom :  SonarQube  Scan
-          uses :  SonarSource/sonarqube-scan-action@v5
-          env :
-            SONAR_TOKEN :  ${{  secrets.SONAR_TOKEN  }}
+    sonarqube:
+      name: SonarQube
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v4
+          with:
+            fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+        - name: SonarQube Scan
+          uses: SonarSource/sonarqube-scan-action@v5
+          env:
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
