--- a/.github/workflows/front-ci.yml
+++ b/.github/workflows/front-ci.yml
@@ -70,6 +70,7 @@ jobs:
   sonarqube:
     name: SonarQube
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - uses: actions/checkout@v4
         with:
@@ -79,4 +80,8 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
-          projectBaseDir: front/
+          projectBaseDir: front
+          args: >
+            -Dsonar.sources=src/app
+            -Dsonar.exclusions=src/**/*.spec.ts
+            -Dsonar.javascript.lcov.reportPaths=coverage/bobapp/lcov.info
