--- a/.github/workflows/back-ci.yml
+++ b/.github/workflows/back-ci.yml
@@ -74,6 +74,8 @@ jobs:
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=BobApp-Back
+      working-directory: back
+      
     - name: 📦 Package
       run: mvn install -DskipTests=true
       working-directory: back
