--- a/front/sonar-project.properties
+++ b/front/sonar-project.properties
@@ -1,6 +1,14 @@
 sonar.projectKey=BobApp-Front
 sonar.organization=tom-devweb
-
+sonar.sources=src
+sonar.exclusions=**/node_modules/**,**/*.spec.ts
+sonar.host.url=https://sonarcloud.io
+sonar.language=TypeScript
+sonar.sourceEncoding=UTF-8
+sonar.tests=src
+sonar.test.inclusions=**/*.spec.ts
+sonar.typescript.tsconfigPath=tsconfig.json
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=OC-DA_Angular_Java-P10-BobApp
