--- a/.github/workflows/front-ci.yml
+++ b/.github/workflows/front-ci.yml
@@ -79,5 +79,11 @@ jobs:
         uses: SonarSource/sonarqube-scan-action@v5
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: 'https://sonarcloud.io/'
         with:
           projectBaseDir: front
+          args: >
+            -Dsonar.sources=src/app
+            -Dsonar.exclusions=src/**/*.spec.ts
+            -Dsonar.javascript.lcov.reportPaths=coverage/bobapp/lcov.info
+
