--- a/.github/workflows/front-ci.yml
+++ b/.github/workflows/front-ci.yml
@@ -44,6 +44,8 @@ jobs:
     steps:
       - name: 🛎️ Checkout du code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
 
       - name: 📦 Installation de Node.js
         uses: actions/setup-node@v4
@@ -60,22 +62,7 @@ jobs:
         run: npm run test -- --no-watch --no-progress --browsers=ChromeHeadless --code-coverage
         working-directory: front
 
-      - name: 📂 Sauvegarde Coverage report
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report
-          path: front/coverage/bobapp
-
-  sonarqube:
-    name: SonarQube
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: SonarQube Scan
+      - name: 🔎 SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v5
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -87,3 +74,9 @@ jobs:
             -Dsonar.exclusions=src/**/*.spec.ts
             -Dsonar.javascript.lcov.reportPaths=coverage/bobapp/lcov.info
 
+      - name: 📂 Sauvegarde Coverage report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: front/coverage/bobapp
