Ajout CD DockerHub

--- a/.github/workflows/front_back-cd.yml
+++ b/.github/workflows/front_back-cd.yml
@@ -30,11 +30,11 @@ jobs:
         with:
           context: "{{defaultContext}}:front"
           push: true
-          tags: user/bobapp-front:latest
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/bobapp-front:latest
       -
         name: Build and push Back
         uses: docker/build-push-action@v6
         with:
           context: "{{defaultContext}}:back"
           push: true
-          tags: user/bobapp-back:latest
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/bobapp-back:latest
