--- a/.github/workflows/front-ci.yml
+++ b/.github/workflows/front-ci.yml
@@ -33,7 +33,7 @@ jobs:
     - name: 📂 Sauvegarde du build
       uses: actions/upload-artifact@v4
       with:
-        name: angular-build
+        name: front-artifact
         path: front/dist/
 
   test:
