--- a/.github/workflows/front_back-cd.yml
+++ b/.github/workflows/front_back-cd.yml
@@ -13,28 +13,40 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
-        name: Login to Docker Hub
+        name: 🛠️ Récupérer l'Artifact du Front
+        uses: actions/download-artifact@v4
+        with:
+          name: front-artifact
+          path: front-build
+      -
+        name: 🛠️ Récupérer l'Artifact du Back
+        uses: actions/download-artifact@v4
+        with:
+          name: backend-artifact
+          path: back-build
+      -
+        name: 🔐 Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Set up QEMU
+        name: 🏗️ Set up QEMU
         uses: docker/setup-qemu-action@v3
       -
-        name: Set up Docker Buildx
+        name: 🛠️ Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       -
-        name: Build and push Front
+        name: 🚀 Build and push Front
         uses: docker/build-push-action@v6
         with:
-          context: "{{defaultContext}}:front"
+          context: front-build
           push: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/bobapp-front:latest
       -
-        name: Build and push Back
+        name: 🚀 Build and push Back
         uses: docker/build-push-action@v6
         with:
-          context: "{{defaultContext}}:back"
+          context: "back-build"
           push: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/bobapp-back:latest
