--- a/.github/workflows/front_back-cd.yml
+++ b/.github/workflows/front_back-cd.yml
@@ -12,18 +12,9 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: 🛠️ Récupérer l'Artifact du Back
-        uses: actions/download-artifact@v4
-        with:
-          name: backend-artifact
-          path: back-build
-      -
-        name: 🛠️ Récupérer l'Artifact du Front
-        uses: actions/download-artifact@v4
-        with:
-          name: front-artifact
-          path: front-build
+      - 
+        name: 📥 Checkout repository
+        uses: actions/checkout@v4
       -
         name: 🔐 Login to Docker Hub
         uses: docker/login-action@v3
@@ -40,13 +31,13 @@ jobs:
         name: 🚀 Build and push Front
         uses: docker/build-push-action@v6
         with:
-          context: front-build
+          context: ./front
           push: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/bobapp-front:latest
       -
         name: 🚀 Build and push Back
         uses: docker/build-push-action@v6
         with:
-          context: "back-build"
+          context: ./back
           push: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/bobapp-back:latest
