--- a/.github/workflows/front-ci.yml
+++ b/.github/workflows/front-ci.yml
@@ -1,8 +1,6 @@
 name: Front Angular CI
 
 on:
-  push:
-    branches: ["main"]
   pull_request:
     branches: [ "main" ]
 
@@ -73,6 +71,9 @@ jobs:
             -Dsonar.sources=src/app
             -Dsonar.exclusions=src/**/*.spec.ts
             -Dsonar.javascript.lcov.reportPaths=coverage/bobapp/lcov.info
+            -Dsonar.pullrequest.branch=${{ github.head_ref }}
+            -Dsonar.pullrequest.base=${{ github.base_ref }}
+            -Dsonar.pullrequest.key=${{ github.event.pull_request.number }}
 
       - name: 📂 Sauvegarde Coverage report
         if: always()
