--- a/.github/workflows/front-ci.yml
+++ b/.github/workflows/front-ci.yml
@@ -71,6 +71,10 @@ jobs:
             -Dsonar.sources=src/app
             -Dsonar.exclusions=src/**/*.spec.ts
             -Dsonar.javascript.lcov.reportPaths=coverage/bobapp/lcov.info
+            -Dsonar.pullrequest.key=${{ github.event.pull_request.number }}
+            -Dsonar.pullrequest.branch=${{ github.head_ref }}
+            -Dsonar.pullrequest.base=${{ github.base_ref }}
+            -X
 
       - name: 📂 Sauvegarde Coverage report
         if: always()
