--- a/.github/workflows/front-ci.yml
+++ b/.github/workflows/front-ci.yml
@@ -74,6 +74,7 @@ jobs:
             -Dsonar.pullrequest.key=${{ github.event.pull_request.number }}
             -Dsonar.pullrequest.branch=${{ github.head_ref }}
             -Dsonar.pullrequest.base=${{ github.base_ref }}
+            -Dsonar.scanner.cache.enabled=false
             -X
 
       - name: 📂 Sauvegarde Coverage report
