--- a/.github/workflows/back-ci.yml
+++ b/.github/workflows/back-ci.yml
@@ -71,7 +71,7 @@ jobs:
     - name: Build and analyze
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=BobApp-Back
+      run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=BobApp-Back -Dsonar.branch.name=main
       working-directory: back
       
     - name: 📦 Package
