--- a/front/sonar-project.properties
+++ b/front/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=BobApp-Front
 sonar.organization=tom-devweb
+sonar.branch.name=main
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=OC-DA_Angular_Java-P10-BobApp
