--- a/.github/workflows/front-ci.yml
+++ b/.github/workflows/front-ci.yml
@@ -71,10 +71,12 @@ jobs:
             -Dsonar.sources=src/app
             -Dsonar.exclusions=src/**/*.spec.ts
             -Dsonar.javascript.lcov.reportPaths=coverage/bobapp/lcov.info
+            -Dsonar.go.coverage.reportPaths=coverage/bobapp/lcov.info
+            -Dsonar.qualitygate.wait=true
+            -Dsonar.verbose=False
             -Dsonar.pullrequest.key=${{ github.event.pull_request.number }}
             -Dsonar.pullrequest.branch=${{ github.head_ref }}
             -Dsonar.pullrequest.base=${{ github.base_ref }}
-            -Dsonar.scanner.cache.enabled=false
             -X
 
       - name: 📂 Sauvegarde Coverage report
